# ugly

./: .gitignore  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.ac  source_ld_library_path.sh
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: git.howto
lang/: Makefile.am  Makefile.in
lang/java/: Makefile.am  Makefile.in  language.c  object.c  runtime.c  ugly_java_priv.h  utils.c
lang/java/helper/: Makefile  helper.java
lang/perl5/: .utils.c.swp  Makefile.am  Makefile.in  language.c  object.c  runtime.c  ugly_perl5_priv.h  utils.c
lang/perl5/helper/: helper.pm
lib/: Makefile.in
lib/c/: Makefile.am  Makefile.in  context.c  gen_iface.sh  language.c  object.c  runtime.c  ugly.c  ugly.h  ugly_api.h  ugly_priv.h  value.c
lib/java/: Makefile  Ugly.java  UglyContext.java  UglyError.java  UglyLanguage.java  UglyRuntime.java  UglyType.java  UglyValue.java
lib/perl5/: Changes  MANIFEST  Makefile.PL  README  Ugly.xs  typemap
test/: Makefile.am  Makefile.in  gen_test.sh  test.h  test.sh
test/.svn/: all-wcprops  entries
test/.svn/text-base/: 00_info.t.svn-base  01_context.t.svn-base  02_value.t.svn-base  03_language.t.svn-base  04_runtime.t.svn-base  05_object.t.svn-base  Makefile.am.svn-base  Makefile.in.svn-base  test.h.svn-base  test.sh.svn-base
test/java/: calc.java  oocalc.java  test.env
test/perl5/: calc.pm  oocalc.pm  test.env
test/perl5/.svn/: all-wcprops  entries
test/perl5/.svn/text-base/: libcalc.pm.svn-base
test/t/: 00_info.t  01_context.t  02_value.t  03_language.t  04_runtime.t  05_object.t
(+9 files in other folders)
